--- a/al_yaqeen/ui/templates/ui/articles/archive/month.html
+++ b/al_yaqeen/ui/templates/ui/articles/archive/month.html
@@ -1,92 +1,7 @@
-{% extends 'ui/base.html' %}{% load i18n wagtailimages_tags %}
+{% extends 'ui/articles/archive/base.html' %}{% load i18n %}
 
 <!---->
-{% block title %}{% trans 'Monthly Article Archive' %}{% endblock %}
+{% block title %}{{ block.super }} | {{ month|date:'F Y' }}{% endblock %}
 
 <!---->
-{% block content %}
-<section class="grid gap-8">
-  <div class="hero min-h-96">
-    <div class="hero-content">
-      <h1 class="text-primary text-2xl font-black lg:text-5xl">
-        {% trans 'Article Archive' %}
-      </h1>
-    </div>
-  </div>
-
-  <div class="rounded-box grid grid-cols-12 overflow-hidden">
-    {% for article in latest %}
-    <div
-      id="{{ article.slug }}"
-      class="col-span-12 md:col-span-6 lg:col-span-4 xl:col-span-3"
-    >
-      <div
-        class="hover:border-success active:border-primary size-full w-full border border-transparent"
-      >
-        <article
-          class="card bg-base-200 lg:card-lg xl:card-xl relative size-full rounded-none"
-        >
-          <figure>{% image article.image scale-100 %}</figure>
-          <main class="card-body gap-4">
-            <h1 class="card-title text-primary rtl:font-kufi font-serif">
-              {{ article.title }}
-            </h1>
-            <p>{{ article.headline }}</p>
-
-            <div class="flex items-center justify-between">
-              <div
-                class="tooltip tooltip-right rtl:tooltip-left tooltip-info"
-                data-tip="{% trans 'Date published' %}"
-              >
-                <time
-                  class="badge badge-soft badge-info"
-                  datetime="{{ article.created_at|date }}"
-                >
-                  {{ article.created_at|date }}
-                </time>
-              </div>
-
-              <div
-                class="tooltip tooltip-right rtl:tooltip-left tooltip-info"
-                data-tip="{% trans 'Category' %}"
-              >
-                <a
-                  href="{% url 'ui:category' article.get_parent.slug %}"
-                  class="badge badge-soft badge-primary"
-                >
-                  <span>{{ article.get_parent.title }}</span>
-                  <i
-                    data-lucide="chevron-right"
-                    class="size-4 lg:size-6 rtl:rotate-180"
-                  ></i>
-                </a>
-              </div>
-            </div>
-
-            <a
-              href="{% url 'ui:article' article.slug %}"
-              class="btn btn-primary"
-            >
-              {% trans 'Continue reading' %}
-            </a>
-          </main>
-        </article>
-      </div>
-    </div>
-    {% endfor %}
-  </div>
-
-  <!-- Use this instead -->
-  <ul>
-    {% for article in object_list %}
-    <li>{{ article.pub_date|date:"F j, Y" }}: {{ article.title }}</li>
-    {% endfor %}
-  </ul>
-
-  <p>
-    {% if previous_month %} Previous Month: {{ previous_month|date:"F Y" }} {%
-    endif %} {% if next_month %} Next Month: {{ next_month|date:"F Y" }} {%
-    endif %}
-  </p>
-</section>
-{% endblock %}
+{% block page_title %}{{ month|date:'F Y' }}{% endblock %}
