update og meta tags

--- a/al_yaqeen/ui/templates/rest_framework/api.html
+++ b/al_yaqeen/ui/templates/rest_framework/api.html
@@ -5,6 +5,7 @@
 
 <!---->
 {% block theme %}luxury{% endblock %}
+
 <!---->
 {% block theme_selector %}{% endblock %}{% block toggle_theme %}silk{% endblock
 %}
@@ -43,9 +44,7 @@
 
 <!---->
 {% block branding_text %}
-<h1 class="hidden text-xl font-semibold text-primary lg:block">
-  {% trans 'Al Yaqeen' %}
-</h1>
+<div></div>
 {% endblock %}
 
 <!---->
