--- a/al_yaqeen/ui/templates/ui/articles/list.html
+++ b/al_yaqeen/ui/templates/ui/articles/list.html
@@ -21,7 +21,7 @@
   </div>
 
   <ol class="grid grid-cols-12 gap-4 lg:gap-6">
-    {% for article in article_list %}
+    {% for article in articles %}
     <li id="{{ article.slug }}" class="col-span-12 md:col-span-6 lg:col-span-4">
       {% include 'ui/components/article.html' %}
     </li>
