--- a/al_yaqeen/ui/templates/ui/categories/list.html
+++ b/al_yaqeen/ui/templates/ui/categories/list.html
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <div class="carousel">
+    <div class="carousel gap-2">
       {% for article in category.get_children.specific|slice:'0:6' %}
       <div
         id="{{ article.slug }}"
