--- a/al_yaqeen/ui/templates/ui/index.html
+++ b/al_yaqeen/ui/templates/ui/index.html
@@ -49,14 +49,14 @@
           </div>
 
           <nav class="flex items-center justify-between">
-            <div class="join items-center divide-x-2 divide-base-100">
+            <div class="flex items-center gap-2 lg:gap-4">
               <div
                 class="tooltip tooltip-right rtl:tooltip-left flex tooltip-error"
                 data-tip="{% trans 'Breaking' %}"
               >
                 <a
                   href="{% url 'ui:articles' %}?is_breaking=True"
-                  class="relative join-item badge badge-sm badge-error lg:badge-lg"
+                  class="relative badge badge-sm badge-error lg:badge-lg"
                 >
                   <i data-lucide="podcast" class="size-4 lg:size-6"></i>
 
@@ -73,7 +73,7 @@
               >
                 <a
                   href="{% url 'ui:category' article.get_parent.slug %}"
-                  class="join-item badge badge-sm badge-primary text-shadow-lg lg:badge-lg"
+                  class="badge badge-sm badge-primary text-shadow-lg lg:badge-lg"
                 >
                   {{ article.get_parent.title }}
                 </a>
@@ -149,7 +149,7 @@
     </div>
   </div>
 
-  <div class="carousel md:gap-4 lg:gap-6">
+  <div class="carousel gap-2">
     {% for article in latest_news %}
     <div id="{{ article.slug }}" class="carousel-item w-full md:w-1/2 lg:w-1/3">
       {% include 'ui/components/article.html' %}
@@ -182,7 +182,7 @@
     </div>
   </div>
 
-  <div class="carousel md:gap-4 lg:gap-6">
+  <div class="carousel gap-2">
     {% for category in categories %}
     <div
       id="{{ category.slug }}"
